fixing extra space below sticky footer

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,14 +1,20 @@
 footer {
+  display: flex;
+  justify-content: space-between;
   width: 100%;
-  height: 50px;
+  min-height: 50px;
   box-shadow: 0px -1px 5px 0px rgba(0,0,0,0.2);
   background-color: #e9ecef;
 
   .left-footer {
-    float: left;
+    display: flex;
+    align-items: center;
     margin-left: 20px;
-    line-height: 50px;
     font-weight: 600;
+
+    p {
+      margin: 0;
+    }
 
     small {
       color: #007bff;
@@ -17,9 +23,13 @@ footer {
   }
 
   .right-footer {
-    float: right;
+    display: flex;
+    align-items: center;
     margin-right: 20px;
-    line-height: 50px;
     font-weight: 300;
+
+    p {
+      margin: 0;
+    }
   }
 }
